# Tremplin

./: .gitignore  LICENSE  README.md  Tremplin.py  install.sh  meet_data.py  pyproject.toml  reinstall.sh  relay.py  settings.default.json  state.py  worker.py
cloud/: .env.example  Caddyfile  Dockerfile  cloud_server.py  deploy_webhook.py  deploy_webhook.service  docker-compose.yml
console_decoders/: __init__.py  base.py  cts_gen6.py  cts_gen6_serial.md  cts_gen7.py  cts_gen7_serial.md  omnisport_2000.py  omnisport_2000_serial.md  quantum.py  swiss_timing_ares21.py  swiss_timing_ares21_serial.md  swiss_timing_quantum_serial.md  utils.py
docs/: admin.md  cloud.md  development.md  installation.md  troubleshooting-apt-http-proxy.md  troubleshooting-tremplin-local-unreachable.md
info/: cloud_parity.md  flask_to_fastapi.md  hardcoded_values.md  native_app_strategy.md  scoreboard_transitions.md  unused_parser_data.md
locales/: en.toml  es.toml  fr.toml
parsers/: hytek_parser.py  lenex_parser.py
preview/: scoreboard_preview.html  settings_preview.html
recorded/: 100m_freestyle.cts  100m_freestyle.lxf  200m_medley_2heats.cts  200m_medley_2heats.lxf  50m_sprint.cts  50m_sprint.lxf  50m_sprint_2heats.cts  50m_sprint_2heats.lxf  real_console.cts  real_console5.cap  real_console5.lxf  real_console5.raw  real_console6.cap  real_console6.lxf  real_console6.raw
routes/: appearance.py  debug.py  meet.py  network.py  scoreboard.py  settings.py  system.py
scripts/: rtc_setup.sh
templates/: console.html  full_schedule.html  help.html  info.html  live-mobile.html  (+10 more)
(+20 files in other folders)
